Corrected directory structure to run from command line